--- a/style.css
+++ b/style.css
@@ -13,11 +13,6 @@ html {
     --primary-color: white;
 }
 
-body {
-    background: url('./assets/home/background-home-desktop.jpg');
-    background-size: cover;
-    background-attachment: fixed;
-}
 
 /* ########################################## NAVBAR STYLING START FROM HERE ######################################## */
 header {
@@ -46,9 +41,11 @@ nav {
 .menu-icon-container {
     display: none;
 }
-.menu-icon-container img{
+
+.menu-icon-container img {
     cursor: pointer;
 }
+
 .nav-link-primary-container {
     margin-left: auto;
 }
@@ -65,7 +62,8 @@ nav {
 .close-menu-icon-container {
     display: none;
 }
-.close-menu-icon-container img{
+
+.close-menu-icon-container img {
     cursor: pointer;
 }
 
@@ -91,94 +89,41 @@ nav {
 }
 
 /* ************************ NAVBAR STYLING END HERE ************************************************** */
+.page-title-container {
+    padding-left: 11.565rem;
+    margin-top: 5.3rem;
+
+}
+
+#page-title {
+    font-family: 'Barlow Condensed';
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 34px;
+    letter-spacing: 4.725px;
+    text-transform: uppercase;
+}
+
+#page-title span {
+    opacity: 0.25;
+    font-weight: 700;
+}
+
 .container {
     display: flex;
+
 }
 
 .content-container, .image-container {
     width: 50%;
 }
 
-.content-container {
-    padding: 17.5rem 0 9.14rem 11.5rem;
-}
-
-.content-container h2 {
-    font-family: 'Barlow Condensed';
-    font-weight: 400;
-    font-size: 28px;
-    line-height: 34px;
-    letter-spacing: 4.725px;
-    color: #D0D6F9;
-    text-transform: uppercase;
-}
-
-.content-container h1 {
-    font-family: 'Bellefair';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 150px;
-    line-height: 172px;
-    padding-top: 24px;
-}
-
-.content-container p {
-    font-family: 'Barlow';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 32px;
-    color: #D0D6F9;
-    padding: 24px 8.2rem 0 0;
-}
-
-.image-container {
-    padding: 25rem 0 9.14rem calc(26.9rem - 118px);
-}
-
-#oval {
-    width: 274px;
-    height: 274px;
-    background: #ffffff;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-}
-
-#oval::before {
-    content: '';
-    width: 0;
-    height: 0;
-    border-radius: 50%;
-    background: rgba(255, 255, 255, 1);
-    opacity: 0.1;
-    position: absolute;
-    pointer-events: none;
-    transition: all 0.8s ease-in;
-}
-
-#oval:hover::before {
-    width: 450px;
-    height: 450px;
-}
-
-#oval h2 {
-    font-family: 'Bellefair';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 32px;
-    line-height: 37px;
-    letter-spacing: 2px;
-    color: #0B0D17;
-
-}
 
 /* ################################################### MEDIA QUEARYES ##################################### */
 @media screen and (max-width:800px) {
+
     body {
-        background: url('./assets/home/background-home-tablet.jpg');
+        background: url('./assets/destination/background-destination-tablet.jpg');
         background-size: cover;
         background-attachment: fixed;
     }
@@ -194,6 +139,16 @@ nav {
         display: none;
     }
 
+    .page-title-container {
+        padding-left: 5rem;
+    }
+
+    #page-title {
+        font-size: 20px;
+        line-height: 24px;
+        letter-spacing: 3.375px;
+    }
+
     /* ***********************CONTAINER STYLING ************************************************ */
     .container {
         flex-direction: column;
@@ -204,61 +159,31 @@ nav {
     }
 
     /* *********************** CONTENT CONTAINER STYLING ************************************************ */
-    .content-container {
-        padding: 13rem 0;
-        text-align: center;
-    }
 
-    .content-container h2 {
-        font-size: 20px;
-        line-height: 24px;
-        letter-spacing: 3.375px;
-    }
-
-    .content-container h1 {
-        line-height: 150px;
-    }
-
-    .content-container p {
-        padding: 0 21.5rem;
-        font-size: 16px;
-        line-height: 28px;
-    }
-
-    /* *********************** IMAGE CONTAINER STYLING ************************************************ */
-    .image-container {
-        display: flex;
-        justify-content: center;
-        padding: calc(20.3rem - 100px)0;
-    }
-
-    #oval {
-        width: 242px;
-        height: 242px;
-    }
-
-    #oval:hover:before {
-        width: 420px;
-        height: 420px;
-    }
 }
 
 @media screen and (max-width:455px) {
+
     body {
-        background: url('./assets/home/background-home-mobile.jpg');
+        background: url('./assets/destination/background-destination-mobile.jpg');
         background-size: cover;
         background-attachment: fixed;
     }
 
     /* *************** navbar styling   ******************** */
     .logo-container img {
-        width: 40px;
-        height: 40px;
+        width: 10.685rem;
+        height: 10.685rem;
     }
 
     .menu-icon-container {
         display: block;
         margin: 0 6.5rem 0 auto;
+    }
+
+    .menu-icon-container img {
+        width: 6.399rem;
+        height: 5.6rem;
     }
 
     .nav-link-primary-container {
@@ -298,46 +223,19 @@ nav {
         display: flex;
         justify-content: flex-end;
         padding: 4rem 6rem;
-        
     }
 
-    /* content container styling */
-    .content-container h2 {
+    .page-title-container {
+        display: flex;
+        justify-content: center;
+        margin-top: 9.08rem;
+        padding: 0;
+    }
+
+    #page-title {
         font-size: 4.267rem;
         line-height: 1.187em;
         letter-spacing: 0.720rem;
     }
 
-    .content-container h1 {
-        font-size: 21.333rem;
-        line-height: 1.250em;
-        padding-top: 4rem;
-    }
-
-    .content-container p {
-        font-size: 4rem;
-        line-height: 1.667em;
-        padding: 4rem 7rem;
-    }
-
-    /* imgae-container */
-    .image-container {
-        padding: 20rem 0;
-    }
-
-    #oval {
-        width: 40rem;
-        height: 40rem;
-    }
-
-    #oval:hover::before {
-        width: 60rem;
-        height: 60rem;
-    }
-
-    #oval h2 {
-        font-size: 5.333rem;
-        line-height: 1.150em;
-        letter-spacing: 0.333rem;
-    }
 }
