--- a/css/home-style.css
+++ b/css/home-style.css
@@ -79,7 +79,9 @@ body {
     color: #0B0D17;
 
 }
-
+.active-home-link{
+    border-bottom: 3px solid rgba(255, 255, 255, 1);
+}
 /* ######################################## MEDIA QUEARYS ######################################################### */
 /* FOR TABLATE */
 @media screen and (max-width:800px) {
